<resources>
    <string name="app_name">保障中心</string>
    <string name="activity_start_project">开工</string>
    <string name="activity_stop_project">停工</string>
    <string name="activity_restart_project">复工</string>
    <string name="activity_daily_patrol">日常巡视</string>
    <string name="activity_indemnity_canter_patrol">保中巡视</string>
    <string name="activity_start_project_search">开工查询</string>
    <string name="activity_project_patrol_search">巡视查询</string>
    <string name="activity_project_list">工程列表</string>
    <string name="activity_accept_strength">强度验收</string>
    <string name="activity_accept_airtight">气密验收</string>
    <string name="activity_project_accept">工程验收</string>
    <string name="activity_budget_list">预算列表</string>
    <string name="activity_construction_accept">施工方案验收</string>
    <string name="activity_material_apply">材料申领</string>
    <string name="activity_material_apply_information">申请详情</string>
    <string name="activity_material_confirm_information">确认详情</string>
    <string name="activity_material_confirm">材料确认</string>
    <string name="activity_material_list">材料清单</string>
    <string name="activity_material_search">材料查询</string>
    <string name="activity_apply_list">申领列表</string>
    <string name="activity_address_manager">地址管理</string>
    <string name="activity_setting">设置</string>
    <string name="activity_upload_manager">上传管理</string>
    <string name="activity_multimedia_brower">多媒体浏览</string>
    <string name="menu_search">查找</string>
    <string name="menu_notifications">通知</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about_us">关于</string>
    <string name="menu_save">保存</string>
    <string name="menu_select">筛选</string>
    <string name="text_menu_search_hint_project_number">工程编号</string>
    <string name="text_start_project">开工</string>
    <string name="text_stop_project">停工</string>
    <string name="text_restart_project">复工</string>
    <string name="text_daily_patrol">日常巡视</string>
    <string name="text_indemnity_canter_patrol">保中巡视</string>
    <string name="text_material_apply">材料申领</string>
    <string name="text_material_search">材料查询</string>
    <string name="text_material_confirm">材料确认</string>
    <string name="text_project_accept">验收</string>
    <string name="text_project_search">工程查询</string>
    <string name="text_address_manager">地址管理</string>
    <string name="text_upload_manager">上传管理</string>
    <string name="text_material_check">材料选择</string>
    <string name="text_material_category">材料类别:</string>
    <string name="text_material_name">材料名称:</string>
    <string name="text_material_format">材料规格:</string>
    <string name="text_material_unit">材料单位:</string>
    <string name="text_confirm_time">确认时间:</string>
    <string name="text_confirm_material_count">入库数量:</string>
    <string name="text_apply_count">申领数量:</string>
    <string name="text_confirm_count">确认数量:</string>
    <string name="text_delivery_information">送货信息</string>
    <string name="text_material_information">材料信息</string>
    <string name="text_construction_team2">施工队:</string>
    <string name="text_collar_department">领用部门:</string>
    <string name="text_collar_man">领用人:</string>
    <string name="text_collar_phone">联系方式:</string>
    <string name="text_delivery_address">送货地址:</string>
    <string name="text_apply_code">申领编号:</string>
    <string name="text_apply_time">申领时间:</string>
    <string name="text_main_material">主材:</string>
    <string name="text_address">地址:</string>
    <string name="text_item_project_code">工程编号:</string>
    <string name="text_item_project_name">工程名称:</string>
    <string name="text_item_start_date">开工时间:</string>
    <string name="text_item_accept_progress">验收进度:</string>
    <string name="text_item_slash">/</string>
    <string name="text_default_address">默认地址</string>
    <string name="text_set_default_address">设为默认</string>
    <string name="text_budget_code">预算编号:</string>
    <string name="text_budget_name">预算名称:</string>
    <string name="text_station_count">站桩数:</string>
    <string name="text_state">状态:</string>
    <string name="text_user_count">用户数:</string>
    <string name="text_check_situation">检查情况:</string>
    <string name="text_leak_change">泄露整改:</string>
    <string name="text_leak_situation">泄漏情况:</string>
    <string name="text_construction_program">施工方案:</string>
    <string name="text_construction_change">施工整改:</string>
    <string name="text_accept_date">验收时间:</string>
    <string name="text_accept_situation">验收情况:</string>
    <string name="text_accept_result">验收结果:</string>
    <string name="text_accept_remark">验收备注:</string>
    <string name="text_finish_date">完工时间:</string>
    <string name="text_choose_date">请选择日期</string>
    <string name="text_upper_limit">已经超过领用上限</string>
    <string name="text_address_add_fail">新增地址失败</string>
    <string name="text_address_add_success">新增地址成功</string>
    <string name="text_address_modify_fail">修改地址失败</string>
    <string name="text_address_modify_success">修改地址成功</string>
    <string name="text_address_delete_fail">删除地址失败</string>
    <string name="text_address_delete_success">删除地址成功</string>
    <string name="text_address_delete_only_online">删除地址仅支持在线操作</string>
    <string name="text_address_modify_only_online">修改地址仅支持在线操作</string>
    <string name="text_not_accept">未验收</string>
    <string name="text_branch_accept_unqualified">支管验收不合格</string>
    <string name="text_branch_accept_qualified">支管验收合格</string>
    <string name="text_project_accept_unqualified">工程验收不合格</string>
    <string name="text_project_accept_qualified">工程验收合格</string>
    <string name="text_search">查询</string>
    <string name="text_material_apply_search">申请单</string>
    <string name="text_material_confirm_search">确认单</string>
    <string name="text_add_address">+ 新增地址</string>
    <string name="text_add_address_title">新增地址</string>
    <string name="text_update_address_title">修改地址</string>
    <string name="text_delete_address_title">删除地址</string>
    <string name="text_is_delete_address_title">是否删除地址?</string>
    <string name="text_is_delete">是否删除?</string>
    <string name="text_material_lr">录入</string>
    <string name="text_finish_project">完工</string>
    <string name="text_project_card_number">施工卡号</string>
    <string name="text_toast_not_network">无网络连接</string>
    <string name="text_toast_network_disconnected">网络断开连接</string>
    <string name="text_toast_date_null">日期不能为空</string>
    <string name="text_toast_data_null">获取数据为空</string>
    <string name="text_toast_date_end_gt_start">起始时间不能大于截止时间</string>
    <string name="text_toast_project_number_not_empty">卡号不能为空</string>
    <string name="text_toast_project_number_not_exist">该工程不存在</string>
    <string name="text_toast_project_started">该工程已开工</string>
    <string name="text_toast_error">发生未知错误</string>
    <string name="text_toast_denied_permission">关闭权限将对程序产生未知影响</string>
    <string name="text_toast_image_compress_save_failed">图片压缩保存失败</string>
    <string name="text_toast_start_project_save_failed">开工保存失败</string>
    <string name="text_toast_start_project_save_success">开工保存成功</string>
    <string name="text_toast_start_project_upload_failed">开工上传失败</string>
    <string name="text_toast_start_project_upload_success">开工上传成功</string>
    <string name="text_toast_stop_project_save_failed">停工保存失败</string>
    <string name="text_toast_stop_project_save_success">停工保存成功</string>
    <string name="text_toast_stop_project_upload_failed">停工上传失败</string>
    <string name="text_toast_stop_project_upload_success">停工上传成功</string>
    <string name="text_toast_restart_project_save_failed">复工保存失败</string>
    <string name="text_toast_restart_project_save_success">复工保存成功</string>
    <string name="text_toast_restart_project_upload_failed">复工上传失败</string>
    <string name="text_toast_restart_project_upload_success">复工上传成功</string>
    <string name="text_toast_finish_project_save_failed">完工保存失败</string>
    <string name="text_toast_finish_project_save_success">完工保存成功</string>
    <string name="text_toast_finish_project_upload_failed">完工上传失败</string>
    <string name="text_toast_finish_project_upload_success">完工上传成功</string>
    <string name="text_toast_start_stop_restart_finish_project_upload_failed">开停复完工上传成功</string>
    <string name="text_toast_start_stop_restart_finish_project_upload_success">开停复完工上传成功</string>
    <string name="text_toast_accept_save_failed">验收保存失败</string>
    <string name="text_toast_accept_save_success">验收保存成功</string>
    <string name="text_toast_accept_upload_failed">验收上传失败</string>
    <string name="text_toast_accept_upload_success">验收上传成功</string>
    <string name="text_toast_project_patrol_search_failed">巡视信息查询失败</string>
    <string name="text_toast_please_select_data">请选择日期</string>
    <string name="text_toast_no_has_photo">没有多媒体文件</string>
    <string name="text_toast_no_more_data">没有更多的数据</string>
    <string name="text_toast_take_photo_limit">照片数量已达上限</string>
    <string name="text_toast_word_download_failed">词语信息下载失败</string>
    <string name="text_toast_word_download_success">词语信息下载成功</string>
    <string name="text_toast_word_save_failed">词语信息保存失败</string>
    <string name="text_toast_word_save_success">词语信息保存成功</string>
    <string name="text_toast_material_download_failed">材料信息下载失败</string>
    <string name="text_toast_material_download_success">材料信息下载成功</string>
    <string name="text_toast_material_get_failed">材料信息获取失败</string>
    <string name="text_toast_material_get_success">材料信息获取成功</string>
    <string name="text_toast_material_save_failed">材料信息保存失败</string>
    <string name="text_toast_material_save_success">材料信息保存成功</string>
    <string name="text_toast_violation_download_failed">违规信息下载失败</string>
    <string name="text_toast_violation_download_success">违规信息下载成功</string>
    <string name="text_toast_violation_save_failed">违规信息保存失败</string>
    <string name="text_toast_violation_save_success">违规信息保存成功</string>
    <string name="text_toast_violation_load_failed">加载违规信息失败</string>
    <string name="text_toast_address_load_failed">地址信息加载失败</string>
    <string name="text_toast_address_load_success">地址信息加载成功</string>
    <string name="text_toast_address_save_failed">地址信息保存失败</string>
    <string name="text_toast_address_save_success">地址信息保存成功</string>
    <string name="text_toast_project_load_failed">工程加载失败</string>
    <string name="text_toast_budget_load_failed">工程预算加载失败</string>
    <string name="text_toast_patrol_save_failed">巡视保存失败</string>
    <string name="text_toast_patrol_save_success">巡视保存成功</string>
    <string name="text_toast_patrol_upload_failed">巡视上传失败</string>
    <string name="text_toast_patrol_upload_success">巡视上传成功</string>
    <string name="text_toast_material_apply_upload_success">材料申领上传成功</string>
    <string name="text_toast_material_apply_upload_failed">材料申领上传失败</string>
    <string name="text_toast_material_confirm_upload_success">材料确认上传成功</string>
    <string name="text_toast_material_confirm_upload_failed">材料确认上传失败</string>
    <string name="text_toast_photo_upload_success">照片上传成功</string>
    <string name="text_project_number">工程编号:</string>
    <string name="text_project_name">工程名称:</string>
    <string name="text_construction_unit">施工单位:</string>
    <string name="text_start_project_date">开工日期:</string>
    <string name="text_project_status">工程状态:</string>
    <string name="text_finish_project_date">完工日期:</string>
    <string name="text_construction_team">施工队:</string>
    <string name="text_office">办事处:</string>
    <string name="text_project_address">地址:</string>
    <string name="text_remark">备注:</string>
    <string name="text_dialog_step_two_time_limit">第二步时间限制(分钟)</string>
    <string name="text_dialog_step_two_to_three_time_interval">第二步至第三步时间间隔(分钟)</string>
    <string name="text_dialog_step_three_time_limit">第三步时间限制(分钟)</string>
    <string name="text_budget_strength_accept">强度</string>
    <string name="text_budget_airtight_accept">气密</string>
</resources>