<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.sh3h.indemnity.util.Constants"/>
        <variable
            name="project"
            type="com.sh3h.dataprovider.data.entity.DUProject"/>
        <variable
            name="presenter"
            type="com.sh3h.indemnity.ui.project.detail.ProjectDetailPresenter"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:minHeight="@dimen/height_40">

                <TextView
                    android:layout_width="@dimen/width_80"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:gravity="right"
                    android:text="@string/text_project_number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@{project.projectNumber ?? Constants.TEXT_EMPTY}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:minHeight="@dimen/height_40">

                <TextView
                    android:layout_width="@dimen/width_80"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:gravity="right"
                    android:text="@string/text_project_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@{project.projectName ?? Constants.TEXT_EMPTY}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:minHeight="@dimen/height_40">

                <TextView
                    android:layout_width="@dimen/width_80"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:gravity="right"
                    android:text="@string/text_construction_unit"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@{project.constructionUnit ?? Constants.TEXT_EMPTY}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:minHeight="@dimen/height_40">

                <TextView
                    android:layout_width="@dimen/width_80"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:gravity="right"
                    android:text="@string/text_construction_team"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@{project.constructionTeam ?? Constants.TEXT_EMPTY}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:minHeight="@dimen/height_40">

                <TextView
                    android:layout_width="@dimen/width_80"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:gravity="right"
                    android:text="@string/text_office"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@{project.office ?? Constants.TEXT_EMPTY}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:minHeight="@dimen/height_40">

                <TextView
                    android:layout_width="@dimen/width_80"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:gravity="right"
                    android:text="@string/text_project_address"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@{project.address ?? Constants.TEXT_EMPTY}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:minHeight="@dimen/height_40">

                <TextView
                    android:layout_width="@dimen/width_80"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:gravity="right"
                    android:text="@string/text_start_project_date"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@{project.startTime}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:minHeight="@dimen/height_40">

                <TextView
                    android:layout_width="@dimen/width_80"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:gravity="right"
                    android:text="@string/text_finish_project_date"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@{project.endTime}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:minHeight="@dimen/height_40">

                <TextView
                    android:layout_width="@dimen/width_80"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:gravity="right"
                    android:text="@string/text_project_status"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@{presenter.getProjectStateName(project.state)}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:minHeight="@dimen/height_40">

                <TextView
                    android:layout_width="@dimen/width_80"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:gravity="right"
                    android:text="@string/text_remark"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_16"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@{project.remark ?? Constants.TEXT_EMPTY}"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>